# multiturn-financial-qa

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: app.py
data/processed/: final_test_set.json  final_test_set.jsonl
notebooks/: finetune_openai_model.ipynb
outputs/analysis/: finetuned_gpt-4.1-mini_on_test_errors.csv
outputs/predictions/: finetuned_gpt-4.1-mini_on_test.json
scripts/: convert_datasets_for_finetuning.py  load_data_to_mongodb.py  prepare_train_test_sets.py  run_baseline_inference.py  run_evaluation.py  run_finetuned_inference.py  validate_train_test_sets.py  visualize_operations_dist.py
src/: config.py  db_utils.py  main.py  program_utils.py
